--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Antonio Cadavid</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="Uros.png">
 </head>
 <body>
     <img src="Uros.png" alt="Portfolio Image" class="portfolio-image">
